...
    <string name="createAccount">Create Account</string>
    <string name="createAccountSubtitle">Do not have an account ?<br /> Register Here</string>
    <string name="phone">Phone</string>
    <string name="registerButton">Register</string>
    <string name="createAccountButton">Create Account / SignUp</string>
    <string name="residentialRegistrationSuccessful">Your Residential Registration is Successful :)\nPlease Login to Continue …</string>
    <string name="dialogPositive">Okay</string>
    <string name="dialogNegative">Cancel</string>
    <string name="registrationDialogTitle">Registration</string>
    <string name="error_emptyFields">Please enter all the fields</string>
    <string name="error_emptyFirstName">Please enter your First Name</string>
    <string name="error_emptyLastName">Please enter your Last Name</string>
    <string name="error_emptyEmail">Please enter your Email</string>
...
